# imager

./: .gitignore  CMakeLists.txt
Source/App/: Main.cpp
Source/Lib/: CMakeLists.txt
Source/Lib/Include/AIHoloImager/: Mesh.hpp
Source/Lib/Source/: AIHoloImager.cpp  Mesh.cpp  Texture.cpp
Source/Lib/Source/MaskGen/: MaskGenerator.cpp  TestMask.py
Source/Lib/Source/MeshRecon/: MeshReconstruction.cpp  MeshReconstruction.hpp
Source/Lib/Source/Python/: PythonSystem.cpp  PythonSystem.hpp
Source/Lib/Source/SfM/: StructureFromMotion.cpp
